--- a/web_dev/creatify/creatify_app/templates/creatify_app-edits/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app-edits/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html>
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Default Title{% endblock %}</title>
